--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Venkataramanan Krishnan(Venkat)</title>
+		<!-- Linking stylesheet file -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css" >
 	</head>
 	<body>
 		<nav>
