--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Venkataramanan Krishnan(Venkat)</title>
-		<!-- Linking stylesheet file -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css" >
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Resume</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, I'm Venkat and I'm from Chennai, India.</h1>
-				<p>I'm a Software Architect in AI and Data Science solution systems. I have been into software industry for 17 years working on architecture, design and development of various software systems both in web and desktop applications. 
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi, I'm Venkat and I'm from Chennai, India.</h1>
+	<p>I'm a Software Architect in AI and Data Science solution systems. I have been into software industry for 17 years working on architecture, design and development of various software systems both in web and desktop applications. 
         <a href="/about">Read more about me...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:venkat.kanithan@gmail.com">email</a></li>
-        		<li><a href="https://github.com/venkat-krish">github.com/venkat-krish</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+</div><!-- /.blurb -->
