--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Venkataramanan Krishnan, Software Architect
 ---
 <div class="blurb">
 	<h1>Hi, I'm Venkat and I'm from Chennai, India.</h1>
-	<p>I'm a Software Architect in AI and Data Science solution systems. I have been into software industry for 17 years working on architecture, design and development of various software systems both in web and desktop applications. 
-        <a href="/about">Read more about me...</a></p>
+	<p>I'm a Software Architect in AI and Data Science solution systems. I have been into software industry for 17 years
+		working on architecture, design and development of various software systems both in web and desktop applications.
+		<a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
